<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/title_contacts">

        <Preference
            app:key="import_contacts_preference"
            app:title="@string/action_add_contact"/>

        <Preference
            app:key="clean_contacts_preference"
            app:title="@string/action_clean_contacts"
            android:summary="@string/action_clean_contacts_details"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_notifications">

        <Preference
            app:key="notifications_settings_preference"
            app:title="@string/action_open_notification_settings">
        </Preference>

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>